Add reposense config file with author

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -4,7 +4,7 @@
     {
       "githubId": "andrewtanJS",
       "displayName": "Andrew Tan",
-      "authorNames": ["andrewtanJS", "andre"]
+      "authorNames": ["andrewtanJS", "andre", "U-ANDREWT\\andre"]
     }
   ]
 }
