--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -2,10 +2,13 @@
   "authors":
   [
     {
+      "githubId": "alyip98"
+    },
+    {
       "githubId": "andrewtanJS",
       "displayName": "Andrew Tan",
       "authorNames": ["andrewtanJS", "andre", "U-ANDREWT\\andre"]
-    },
+    }
     {
       "githubId": "preethi-d",
       "displayName": "preethid"
