--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -2,12 +2,12 @@
   "authors":
   [
     {
-      "githubId": "alyip98"
-    },
-    {
       "githubId": "andrewtanJS",
       "displayName": "Andrew Tan",
       "authorNames": ["andrewtanJS", "andre", "U-ANDREWT\\andre"]
+    },
+    {
+      "githubId": "cyrusguo"
     },
     {
       "githubId": "preethi-d",
