--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -7,11 +7,12 @@
       "authorNames": ["andrewtanJS", "andre", "U-ANDREWT\\andre"]
     },
     {
-      "githubId": "cyrusguo"
-    },
-    {
       "githubId": "preethi-d",
       "displayName": "preethid"
+    },
+    {
+      "githubId": "yogtew",
+      "displayName": "Yogusvi Tewari"
     }
   ]
 }
