--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -9,6 +9,7 @@
     {
       "githubId": "preethi-d",
       "displayName": "preethid"
+      "authorNames": ["preethi-d", "preethid", "preethidevarajan"]
     },
     {
       "githubId": "yogtew",
