--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -8,7 +8,7 @@
     },
     {
       "githubId": "preethi-d",
-      "displayName": "preethid"
+      "displayName": "preethid",
       "authorNames": ["preethi-d", "preethid", "preethidevarajan"]
     },
     {
