Update config.json for reposense

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -8,7 +8,8 @@
     },
     {
       "githubId": "preethi-d",
-      "displayName": "preethid"
+      "displayName": "preethid",
+      "authorNames": ["preethi-d", "preethid", "preethidevarajan"]
     },
     {
       "githubId": "yogtew",
