--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,31 @@ dependencies {
     implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
     implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 
+    implementation 'com.android.support:appcompat-v7:22.1.1'
+
+    //Joda-Time for calendar time
+    implementation 'joda-time:joda-time:2.7'
+
+    // base Office 365 SDK OData libraries:
+    implementation 'com.microsoft.services:odata-engine-android-impl:0.13.0@aar'
+
+    //Office 365 SDK service libraries:
+    implementation 'com.microsoft.services:outlook-services:0.13.0'
+    implementation 'com.microsoft.services:discovery-services:0.13.0'
+    implementation 'com.microsoft.services:directory-services:0.13.0'
+    implementation 'com.microsoft.services:file-services:0.13.0'
+
+    // Azure Active Directory Library
+    implementation 'com.microsoft.aad:adal:1.1.3'
+
+    // Retrofit library to for API requests and gson for JSON parsing
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.testfx', name: 'testfx-core', version: testFxVersion, {
         exclude group: 'org.testfx', module: 'testfx-internal-java8'
