--- a/build.gradle
+++ b/build.gradle
@@ -85,13 +85,8 @@ dependencies {
     // Azure Active Directory Library
     implementation 'com.microsoft.aad:adal:1.1.3'
 
-    // Retrofit library to for API requests and gson for JSON parsing
+    // gson for JSON parsing
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
-    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
-
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.testfx', name: 'testfx-core', version: testFxVersion, {
