--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -17,7 +17,7 @@
     },
     {
       "githubId" : "alyip98",
-      "displyName" : "Alfred Yip"
+      "displayName" : "Alfred Yip"
     },
     {
       "githubId" : "cyrusguo",
